[package]
name = "cbc-sl"
version = "0.5.2"
edition = "2021"
authors = ["Malloc Voidstar <1284317+AlyoshaVasilieva@users.noreply.github.com>"]
license = "Apache-2.0"
description = "watch the Olympics via CBC.ca with streamlink"

[dependencies]
anyhow = "1.0.42"
ureq = { version = "2.4", features = ["socks-proxy", "json", "brotli"] }
clap = { version = "3.0.14", features = ["derive"] }
regex = { version = "1.0", default-features = false, features = ["std", "perf"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1.8"
extend = "1.1.1"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock", "oldtime"] }
owo-colors = { version = "3.2", features = ["supports-colors"] }
hls_m3u8 = "0.4.1"
url = "2.2.2"
quick-xml = { version = "0.22.0", features = ["serialize"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.32.0"
features = ["alloc", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"]