[package]
name = "cbc-sl"
version = "0.6.1"
edition = "2021"
authors = ["Malloc Voidstar <1284317+AlyoshaVasilieva@users.noreply.github.com>"]
license = "Apache-2.0"
description = "watch the Olympics via CBC.ca with streamlink"

[dependencies]
anyhow = "1.0.42"
ureq = { version = "2.4", features = ["socks-proxy", "json", "brotli"] }
clap = { version = "4.5.9", features = ["derive"] }
regex = { version = "1.0", default-features = false, features = ["std", "perf"] }
lazy-regex = "3.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1.8"
extend = "1.2"
owo-colors = { version = "4.0", features = ["supports-colors"] }
hls_m3u8 = "0.4.1"
url = "2.2.2"
windows-strings = "0.5.1"
jiff = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = ["Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"]

[profile.release]
codegen-units = 1
lto = true
