[package]
name = "cbc-sl"
version = "0.7.0"
edition = "2024"
authors = ["Malloc Voidstar <1284317+AlyoshaVasilieva@users.noreply.github.com>"]
license = "Apache-2.0"
description = "watch the Olympics via CBC.ca with streamlink"

[dependencies]
anyhow = "1.0.42"
ureq = { version = "3.1.4", default-features = false, features = ["socks-proxy", "json", "brotli"] }
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
owo-colors = { version = "4.0", features = ["supports-colors"] }
url = "2.5"
windows-strings = "0.5.1"
jiff = { version = "0.2", features = ["serde"] }

[features]
default = ["ureq/rustls"]
native-tls = ["ureq/native-tls"]

# can use https://crates.io/crates/enable-ansi-support instead
[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = ["Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"]

[profile.release]
codegen-units = 1
lto = true
